tests/fixtures/invalid/min_bool.py
# Cannot call min() with Bool
x = min(True)
